syntax = "proto3";

package itemmaster;

option go_package = "./;itemmasterpb";

message ItemMasterProto{
    int32 item_id = 1;
    string item_number = 2;
    string item_name = 3;
}

message CreateItemMasterRequest{
    ItemMasterProto item_master = 1;
}

message CreateItemMasterResponse{
    ItemMasterProto item_master = 1;
}

message GetAllItemMasterRequest{
    
}

message GetAllItemMasterResponse{
    repeated ItemMasterProto item_master_list = 1;
}

service ItemMasterService{
    rpc CreateItemMaster(CreateItemMasterRequest) returns (CreateItemMasterResponse);
    rpc GetAllItemMaster(GetAllItemMasterRequest) returns(GetAllItemMasterResponse); 
}